# m2rs

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
assets/: fox.glb  fox_wait.glb  run.glb  run.gltf  shaman.glb  shaman.gltf  shaman_run.glb  vladimir.glb  vladirmir.gltf  wait.glb  wait.gltf
assets/pack/environment/: a1.json  b1.json  b2.json  battle_guild01.json  c1.json  c2.json  c3.json  dark.json  desert_02.json  map_b_fielddungeo.json  map_dd.json  map_dd_teste.json  map_n_desert_01.json  map_n_flame_01.json  milgyo.json  monkeydungeon.json  monkeydungeon_02.json  monkeydungeon_03.json  moonlight04.json  moonlight05.json  n-snowm01.json  resources_zon.json  skipia_dungeon.json  snowm02.json  spiderdungeon.json  sungzi.json  t1.json  t2.json  trent.json  trent02.json
assets/pack/property/: properties.d.ts  properties.json
assets/pack/terrainmaps/: stone1.dds
pkg/: README.md  game.js  game_bg.wasm  m2rs.d.ts  m2rs.js  m2rs_bg.js  m2rs_bg.wasm.d.ts  package.json
src/: assets.rs  camera.rs  cli.rs  functions.rs  instance.rs  lib.rs  light.wgsl  main.rs  model.rs  modules.rs  shader.wgsl
src/modules/: assets.rs  conversion.rs  core.rs  geometry.rs  mod.rs  pipelines.rs  state.rs  terrain.rs  utils.rs
src/modules/assets/: assets.rs  gltf_loader.rs
src/modules/camera/: camera.rs  free_camera_controller.rs  mod.rs  orbit_controller.rs
src/modules/character/: actor.rs  attachments.rs  character.rs  combo.rs  mod.rs  weapon.rs
src/modules/conversion/: common.rs  environment.rs  maps.rs  mod.rs  msa.rs  property.rs  utils.rs
src/modules/core/: directional_light.rs  instance.rs  light.rs  light_source.rs  mod.rs  model.rs  motions.rs  object.rs  object_3d.rs  raycaster.rs  scene.rs  skeleton.rs  skinning.rs  texture.rs
src/modules/environment/: clouds.rs  cycle.rs  environment.rs  fog.rs  mod.rs  sky.rs  sun.rs
src/modules/geometry/: buffer.rs  plane.rs  sphere.rs
src/modules/pipelines/: clouds_pipeline.rs  common_pipeline.rs  mod.rs  render_pipeline.rs  shadow_pipeline.rs  shadow_simple_mesh_pipeline.rs  shadow_skinned_mesh_pipeline.rs  simple_models_pipeline.rs  skinned_models_pipeline.rs  sky_pipeline.rs  sun_pipeline.rs  terrain_pipeline.rs  water_pipeline.rs
src/shaders/: clouds.wgsl  light.wgsl  mipmap.wgsl  shader.wgsl  shader_v2.wgsl  shadow.wgsl  shadow_skinned_mesh.wgsl  simple_mesh.wgsl  skinned_mesh.wgsl  sky.wgsl  sun.wgsl  terrain.wgsl  test.wgsl  water.wgsl
tools/fbx_gltf/: convert.sh
(+3435 files in other folders)
