[package]
name = "m2rs"
version = "0.1.0"
authors = ["Sufhal"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "0.19"
winit = { version = "0.29", features = [ "rwh_05" ] }
tobj = { version = "3.2.1", features = [ "async" ] }
instant = "0.1"
uuid = { version = "1.10.0", features = [ "v4", "fast-rng" ] }
gltf = "1.4.1"
web-time = "1.1.0"
serde_json = "1.0.127"
serde = { version = "1.0.203", features = ["derive"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}
reqwest = { version = "0.11" }
getrandom = { version = "0.2", features = [ "js" ] }
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
